--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reason-react-navigation",
+  "name": "@reason-react-native/react-navigation",
   "version": "3.11.0-alpha.0",
   "publishConfig": {
     "access": "public"
