--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@reason-react-native/react-navigation",
   "version": "4.0.0-alpha.0",
+  "peerDependencies": {
+    "react-navigation": "^4.0.0",
+    "reason-react": "^0.7.0",
+    "reason-react-native": "^0.60.0"
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -32,18 +37,12 @@
     "test": "yarn re:clean-build"
   },
   "devDependencies": {
-    "bs-platform": "^5.0.4",
-    "husky": "^1.3.1",
-    "lerna": "^3.4.0",
-    "lint-staged": "^8.1.5",
-    "npm-run-all": "^3.0.0",
-    "prettier": "^1.16.4",
-    "react-navigation": "^4.0.2",
+    "bs-platform": "^5.2.0",
+    "husky": "^1.3.0",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.18.0",
     "reason-react": "^0.7.0",
     "reason-react-native": "^0.60.0"
-  },
-  "peerDependencies": {
-    "react-navigation": "^4.0.0"
   },
   "prettier": {
     "trailingComma": "all",
