--- a/bsconfig.json
+++ b/bsconfig.json
@@ -18,7 +18,7 @@
   ],
   "bsc-flags": ["-bs-no-version-header"],
   "warnings": {
-    "number": "+102"
+    "number": "+102-105"
   },
   "bs-dependencies": ["reason-react", "reason-react-native"]
 }
