--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reason-react-navigation",
   "version": "4.0.0-alpha.0",
   "peerDependencies": {
-    "react-navigation": "^4.0.0",
+    "@react-navigation/core": "^5.0.0",
     "reason-react": "^0.7.0",
     "reason-react-native": "^0.60.0"
   },
