--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "reason-react-navigation",
-  "version": "5.0.0-alpha.0",
+  "version": "5.0.0-beta.0",
   "peerDependencies": {
     "@react-navigation/core": "^5.0.0",
     "reason-react": "^0.7.0",
-    "reason-react-native": "^0.60.0"
+    "reason-react-native": "^0.61.0"
   },
   "publishConfig": {
     "access": "public"
@@ -15,7 +15,8 @@
     "reason",
     "reasonml",
     "bucklescript",
-    "react-native"
+    "react-native",
+    "react-navigation"
   ],
   "files": [
     "*",
@@ -34,15 +35,17 @@
     "re:clean-build": "bsb -clean-world -make-world",
     "start": "yarn re:start",
     "build": "yarn re:build",
-    "test": "yarn re:clean-build"
+    "test": "yarn re:clean-build",
+    "release": "npmpub"
   },
   "devDependencies": {
-    "bs-platform": "^7.0.0",
+    "bs-platform": "^7.2.0",
     "husky": "^1.3.0",
     "lint-staged": "^8.1.0",
+    "npmpub": "^5.0.0",
     "prettier": "^1.18.0",
     "reason-react": "^0.7.0",
-    "reason-react-native": "^0.60.0"
+    "reason-react-native": "^0.61.0"
   },
   "prettier": {
     "trailingComma": "all",
