--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "devDependencies": {
     "bs-platform": "^7.2.0",
     "husky": "^1.3.0",
-    "lint-staged": "^8.1.0",
+    "lint-staged": "^10.1.1",
     "npmpub": "^5.0.0",
     "prettier": "^1.18.0",
     "reason-react": "^0.7.0",
@@ -53,12 +53,10 @@
   },
   "lint-staged": {
     "*.{md,json,js,css}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ],
     "*.{re,rei}": [
-      "bsrefmt --in-place",
-      "git add"
+      "bsrefmt --in-place"
     ]
   },
   "husky": {
