--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "reason-react-navigation",
   "version": "5.0.0-beta.0",
   "peerDependencies": {
-    "@react-navigation/core": "^5.0.0",
+    "@react-navigation/native": "^5.0.0",
+    "@react-navigation/bottom-tabs": "^5.0.0",
+    "@react-navigation/stack": "^5.0.0",
+    "@react-navigation/material-top-tabs": "^5.0.0",
+    "@react-navigation/material-bottom-tabs": "^5.0.0",
+    "@react-navigation/drawer": "^5.0.0",
     "reason-react": "^0.7.0",
     "reason-react-native": "^0.61.0"
   },
