--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@react-navigation/material-top-tabs": "^5.0.0",
     "@react-navigation/material-bottom-tabs": "^5.0.0",
     "@react-navigation/drawer": "^5.0.0",
-    "reason-react": "^0.7.0",
-    "reason-react-native": "^0.61.0"
+    "reason-react": "^0.9.0",
+    "reason-react-native": "^0.62.0"
   },
   "publishConfig": {
     "access": "public"
@@ -44,17 +44,16 @@
     "release": "npmpub"
   },
   "devDependencies": {
-    "bs-platform": "^7.2.0",
-    "husky": "^1.3.0",
-    "lint-staged": "^10.1.1",
+    "bs-platform": "^8.0.0",
+    "husky": "^4.0.0",
+    "lint-staged": "^10.0.0",
     "npmpub": "^5.0.0",
-    "prettier": "^1.18.0",
-    "reason-react": "^0.7.0",
-    "reason-react-native": "^0.61.0"
+    "prettier": "^2.0.0",
+    "reason-react": "^0.9.0",
+    "reason-react-native": "^0.62.0"
   },
   "prettier": {
-    "trailingComma": "all",
-    "proseWrap": "always"
+    "trailingComma": "all"
   },
   "lint-staged": {
     "*.{md,json,js,css}": [
