--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reason-react-navigation",
-  "version": "5.0.0-beta.0",
+  "version": "5.0.0",
   "peerDependencies": {
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/bottom-tabs": "^5.0.0",
