--- a/package.json
+++ b/package.json
@@ -24,12 +24,9 @@
     "react-navigation"
   ],
   "files": [
-    "*",
-    "!.DS_Store",
-    "!**/*.bs.js",
-    "!.merlin",
-    "!lib/bs",
-    "!lib/ocaml"
+    "*.md",
+    "bsconfig.json",
+    "src/*.re"
   ],
   "scripts": {
     "format:most": "prettier --write \"**/*.{md,json,js,css}\"",
