--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "files": [
     "*.md",
     "bsconfig.json",
-    "src/*.re"
+    "src/*.re",
+    "src/*.js",
+    "!src/*.bs.js"
   ],
   "scripts": {
     "format:most": "prettier --write \"**/*.{md,json,js,css}\"",
