--- a/bsconfig.json
+++ b/bsconfig.json
@@ -18,7 +18,9 @@
   ],
   "bsc-flags": ["-bs-no-version-header"],
   "warnings": {
-    "number": "+102-105"
+    "error": true,
+    "number": "-30"
   },
+  "warnings-number-30-is-useless": "https://github.com/ocaml/ocaml/pull/9046",
   "bs-dependencies": ["reason-react", "reason-react-native"]
 }
