--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reason-react-navigation",
   "description": "ReScript bindings for react-navigation.",
-  "version": "5.1.1",
+  "version": "5.1.2",
   "peerDependencies": {
     "@react-navigation/native": "^5.0.0",
     "@react-navigation/bottom-tabs": "^5.0.0",
@@ -29,6 +29,7 @@
     "*.md",
     "bsconfig.json",
     "src/**/*.re",
+    "src/**/*.res",
     "src/**/*.js",
     "!src/**/*.bs.js"
   ],
