--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,10 +1,7 @@
 {
-  "name": "reason-react-navigation",
+  "name": "rescript-react-navigation",
   "namespace": "react-navigation",
-  "refmt": 3,
-  "reason": {
-    "react-jsx": 3
-  },
+  "reason": { "react-jsx": 3 },
   "package-specs": {
     "module": "commonjs",
     "in-source": true
@@ -22,5 +19,5 @@
     "number": "-30"
   },
   "warnings-number-30-is-useless": "https://github.com/ocaml/ocaml/pull/9046",
-  "bs-dependencies": ["reason-react", "reason-react-native"]
+  "bs-dependencies": ["@rescript/react", "rescript-react-native"]
 }
