--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reason-react-navigation",
+  "name": "rescript-react-navigation",
   "description": "ReScript bindings for react-navigation.",
   "version": "5.1.2",
   "peerDependencies": {
@@ -9,19 +9,16 @@
     "@react-navigation/material-top-tabs": "^5.0.0",
     "@react-navigation/material-bottom-tabs": "^5.0.0",
     "@react-navigation/drawer": "^5.0.0",
-    "reason-react": "^0.9.0",
-    "reason-react-native": "^0.63.0"
+    "@rescript/react": "^0.10.0",
+    "rescript-react-native": "^0.64.3"
   },
   "publishConfig": {
     "access": "public"
   },
-  "repository": "https://github.com/reason-react-native/react-navigation.git",
+  "repository": "https://github.com/rescript-react-native/react-navigation.git",
   "license": "MIT",
   "keywords": [
     "rescript",
-    "reason",
-    "reasonml",
-    "bucklescript",
     "react-native",
     "react-navigation"
   ],
@@ -30,6 +27,7 @@
     "bsconfig.json",
     "src/**/*.re",
     "src/**/*.res",
+    "src/**/*.resi",
     "src/**/*.js",
     "!src/**/*.bs.js"
   ],
@@ -46,13 +44,13 @@
     "release": "npmpub"
   },
   "devDependencies": {
-    "bs-platform": "^8.2.0",
+    "bs-platform": "^9.0.0",
     "husky": "^4.0.0",
     "lint-staged": "^10.0.0",
     "npmpub": "^5.0.0",
     "prettier": "^2.0.0",
-    "reason-react": "^0.9.0",
-    "reason-react-native": "^0.63.0"
+    "@rescript/react": "^0.10.0",
+    "rescript-react-native": "^0.64.3"
   },
   "prettier": {
     "trailingComma": "all"
