--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "description": "ReScript bindings for react-navigation.",
   "version": "5.1.3",
   "peerDependencies": {
-    "@react-navigation/native": "^5.0.0",
     "@react-navigation/bottom-tabs": "^5.0.0",
-    "@react-navigation/stack": "^5.0.0",
-    "@react-navigation/material-top-tabs": "^5.0.0",
-    "@react-navigation/material-bottom-tabs": "^5.0.0",
     "@react-navigation/drawer": "^5.0.0",
+    "@react-navigation/material-bottom-tabs": "^5.0.0",
+    "@react-navigation/material-top-tabs": "^5.0.0",
+    "@react-navigation/native": "^5.0.0",
+    "@react-navigation/stack": "^5.0.0",
     "@rescript/react": "^0.10.0",
     "rescript-react-native": "^0.64.3"
   },
@@ -35,21 +35,21 @@
     "format:most": "prettier --write \"**/*.{md,json,js,css}\"",
     "format:re": "find . -name \"*.re\" -or -name \"*.rei\" | grep -v \"node_modules\" | xargs bsrefmt --in-place",
     "format": "yarn format:most && yarn format:re",
-    "re:start": "bsb -make-world -w",
-    "re:build": "bsb -make-world",
-    "re:clean-build": "bsb -clean-world -make-world",
+    "re:start": "rescript -w",
+    "re:build": "rescript",
+    "re:clean-build": "rescript clean && rescript",
     "start": "yarn re:start",
     "build": "yarn re:build",
     "test": "yarn re:clean-build",
     "release": "npmpub"
   },
   "devDependencies": {
-    "bs-platform": "^9.0.0",
+    "@rescript/react": "^0.10.0",
     "husky": "^4.0.0",
     "lint-staged": "^10.0.0",
     "npmpub": "^5.0.0",
     "prettier": "^2.0.0",
-    "@rescript/react": "^0.10.0",
+    "rescript": "^9.1.2",
     "rescript-react-native": "^0.64.3"
   },
   "prettier": {
