--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rescript-react-navigation",
   "description": "ReScript bindings for react-navigation.",
-  "version": "5.1.3",
+  "version": "5.2.0",
   "peerDependencies": {
     "@react-navigation/bottom-tabs": "^5.0.0",
     "@react-navigation/drawer": "^5.0.0",
@@ -25,7 +25,6 @@
   "files": [
     "*.md",
     "bsconfig.json",
-    "src/**/*.re",
     "src/**/*.res",
     "src/**/*.resi",
     "src/**/*.js",
@@ -33,8 +32,8 @@
   ],
   "scripts": {
     "format:most": "prettier --write \"**/*.{md,json,js,css}\"",
-    "format:re": "find . -name \"*.re\" -or -name \"*.rei\" | grep -v \"node_modules\" | xargs bsrefmt --in-place",
-    "format": "yarn format:most && yarn format:re",
+    "format:res": "rescript format -all",
+    "format": "yarn format:most && yarn format:res",
     "re:start": "rescript -w",
     "re:build": "rescript",
     "re:clean-build": "rescript clean && rescript",
@@ -56,12 +55,8 @@
     "trailingComma": "all"
   },
   "lint-staged": {
-    "*.{md,json,js,css}": [
-      "prettier --write"
-    ],
-    "*.{re,rei}": [
-      "bsrefmt --in-place"
-    ]
+    "*.{md,json,js,css}": "prettier --write",
+    "*.{res,resi}": "rescript format"
   },
   "husky": {
     "hooks": {
