--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/stack": "^6.0.0",
     "@rescript/react": "^0.10.0",
-    "rescript-react-native": "^0.64.3 || ^0.65.0 || ^0.66.0"
+    "rescript-react-native": "^0.64.3 || ^0.65.0 || ^0.66.0 || ^0.67.0"
   },
   "publishConfig": {
     "access": "public"
@@ -49,7 +49,7 @@
     "npmpub": "^5.0.0",
     "prettier": "^2.0.0",
     "rescript": "^9.1.4",
-    "rescript-react-native": "^0.64.3 || ^0.65.0 || ^0.66.0"
+    "rescript-react-native": "^0.64.3 || ^0.65.0 || ^0.66.0 || ^0.67.0"
   },
   "prettier": {
     "trailingComma": "all"
