--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,5 +1,5 @@
 {
-  "name": "rescript-react-navigation",
+  "name": "reason-react-navigation",
   "namespace": "react-navigation",
   "jsx": {
     "version": 4,
@@ -22,5 +22,5 @@
     "number": "-30"
   },
   "warnings-number-30-is-useless": "https://github.com/ocaml/ocaml/pull/9046",
-  "bs-dependencies": ["@rescript/react", "rescript-react-native"]
+  "bs-dependencies": ["reason-react", "reason-react-native"]
 }
