--- a/example/bsconfig.json
+++ b/example/bsconfig.json
@@ -13,6 +13,10 @@
     {
       "dir": "src",
       "subdirs": true
+    },
+    {
+      "dir": "../src",
+      "subdirs": true
     }
   ],
   "bs-dependencies": ["reason-react", "reason-react-native"]
