--- a/bsconfig.json
+++ b/bsconfig.json
@@ -6,7 +6,7 @@
     "mode": "classic"
   },
   "package-specs": {
-    "module": "commonjs",
+    "module": "es6",
     "in-source": true
   },
   "suffix": ".bs.js",
