--- a/example/package.json
+++ b/example/package.json
@@ -9,11 +9,20 @@
     "re:clean": "bsb -clean-world",
     "re:watch": "bsb -clean-world -make-world -w",
     "re:build": "bsb -clean-world -make-world",
-    "test": "jest"
+    "test": "jest",
+    "reset-vendor": "cd src/vendor && rm -rf * && cp ../../../src/* ."
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "queue-microtask": "^1.2.3",
     "react": "^16.13.0",
     "react-native": "^0.63.0",
+    "react-native-gesture-handler": "2.9.0",
+    "react-native-reanimated": "2.2.0",
+    "react-native-safe-area-context": "3.4.1",
+    "react-native-screens": "3.13.1",
     "reason-react": "^0.9.0",
     "reason-react-native": "^0.63.0"
   },
