--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   ],
   "files": [
     "*.md",
-    "bsconfig.json",
+    "rescript.json",
     "src/**/*.res",
     "src/**/*.resi",
     "src/**/*.js",
